influxdb/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: influx-admin-token
  namespace: hass
spec:
  headers:
    customRequestHeadersSecret: influx-admin-header
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: influx-read-token
  namespace: hass
spec:
  headers:
    customRequestHeadersSecret: influx-reader-header
