influxdb/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/component: stats
    app.kubernetes.io/part-of: hass
  name: influxdb
  namespace: hass
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: influxdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: influxdb
    spec:         
      containers:
      - image: docker.io/influxdb:2.7.12
        imagePullPolicy: IfNotPresent
        name: influxdb
        ports:
          - containerPort: 8086
        volumeMounts:
        - mountPath: /var/lib/influxdb2
          name: var-lib-influxdb
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: var-lib-influxdb
        persistentVolumeClaim:
          claimName: influxdb
