influxdb/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: influxdb
  name: influxdb
  namespace: hass
spec:
  ports:
    - port: 8086 
      targetPort: 8086 
      name: tcp
  selector:
    app.kubernetes.io/name: influxdb
  type: ClusterIP
