influxdb/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
  namespace: hass
  labels:
    app.kubernetes.io/name: influxdb
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd, auth-oauth-auth@kubernetescrd,influxdb-influx-read-token@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: https://mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb
                port:
                  number: 8086
  tls:
    - secretName: tls-certificate
      hosts:
        - https://mydomain.com
